FILE(GLOB TEST_SOURCES *.cpp)
SET(SOURCE_FILES ${TEST_SOURCES})

ADD_EXECUTABLE(BRepGProp_test ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(BRepGProp_test TKG2d TKPrim TKTopAlgo)
TARGET_LINK_LIBRARIES(BRepGProp_test gcov ${GTEST_LIBRARY} ${GTEST_MAIN_LIBRARY})

GTEST_ADD_TESTS(BRepGProp_test "" ${SOURCE_FILES})
