project(DRAWEXE)

if (WIN32)
  list( APPEND DRAWEXE_PRECOMPILED_DEFS "-D__DRAWEXE_DLL" )
  string( REGEX REPLACE ";" " " DRAWEXE_PRECOMPILED_DEFS "${DRAWEXE_PRECOMPILED_DEFS}")
endif()

  list( APPEND DRAWEXE_COMPILER_DIRECTORIES "${WOK_LIB_PATH}" )
  list( APPEND DRAWEXE_COMPILER_DIRECTORIES "../../../inc" )
  list( APPEND DRAWEXE_COMPILER_DIRECTORIES "../../../drv/DRAWEXE" )
  list( APPEND DRAWEXE_COMPILER_DIRECTORIES "../../../src/DRAWEXE" )

if (WIN32)
else()
endif()

  list( APPEND DRAWEXE_USED_LIBS TKDraw )
  list( APPEND DRAWEXE_USED_LIBS TKMesh )
  list( APPEND DRAWEXE_USED_LIBS TKTopAlgo )
  list( APPEND DRAWEXE_USED_LIBS TKHLR )
  list( APPEND DRAWEXE_USED_LIBS TKGeomAlgo )
  list( APPEND DRAWEXE_USED_LIBS TKGeomBase )
  list( APPEND DRAWEXE_USED_LIBS TKG2d )
  list( APPEND DRAWEXE_USED_LIBS TKBRep )
  list( APPEND DRAWEXE_USED_LIBS TKMath )
  list( APPEND DRAWEXE_USED_LIBS TKG3d )
  list( APPEND DRAWEXE_USED_LIBS TKernel )
  list( APPEND DRAWEXE_USED_LIBS TKService )

if (WIN32)
elseif(APPLE)
else()
endif()

  list( APPEND DRAWEXE_USED_SRCFILES "../../../src/DRAWEXE/DRAWEXE.cxx" )
  SOURCE_GROUP (DRAWEXE FILES "../../../src/DRAWEXE/DRAWEXE.cxx")

if (WIN32)
else()

endif()

if ("${USED_TOOLKITS}" STREQUAL "" OR DEFINED TurnONtheDRAWEXE)
 add_executable( DRAWEXE ${DRAWEXE_USED_SRCFILES} )

 set_property(TARGET DRAWEXE PROPERTY FOLDER Draw)

 install( TARGETS DRAWEXE DESTINATION "${INSTALL_DIR}/bin" )

 set_target_properties( DRAWEXE PROPERTIES COMPILE_FLAGS "${DRAWEXE_PRECOMPILED_DEFS}" )
 include_directories( ${DRAWEXE_COMPILER_DIRECTORIES} )
 target_link_libraries( DRAWEXE ${DRAWEXE_USED_LIBS} )
endif()
