project(DRAWEXE)

if (WIN32)
  list( APPEND DRAWEXE_PRECOMPILED_DEFS "-D__DRAWEXE_DLL" )
  string( REGEX REPLACE ";" " " DRAWEXE_PRECOMPILED_DEFS "${DRAWEXE_PRECOMPILED_DEFS}")
endif()

  list( APPEND DRAWEXE_COMPILER_DIRECTORIES "${WOK_LIB_PATH}" )
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}/inc")
    list( APPEND DRAWEXE_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/inc" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/inc")
    list( APPEND DRAWEXE_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/inc" )
  ENDIF()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
    IF(EXISTS "${BUILD_PATCH_DIR}/drv/DRAWEXE")
      list( APPEND DRAWEXE_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/drv/DRAWEXE" )
    ENDIF()
    IF(EXISTS "${BUILD_PATCH_DIR}/src/DRAWEXE")
      list( APPEND DRAWEXE_COMPILER_DIRECTORIES "${BUILD_PATCH_DIR}/src/DRAWEXE" )
    ENDIF()

  ENDIF()

  IF(EXISTS "${CMAKE_SOURCE_DIR}/drv/DRAWEXE")
    list( APPEND DRAWEXE_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/drv/DRAWEXE" )
  ENDIF()
  IF(EXISTS "${CMAKE_SOURCE_DIR}/src/DRAWEXE")
    list( APPEND DRAWEXE_COMPILER_DIRECTORIES "${CMAKE_SOURCE_DIR}/src/DRAWEXE" )
  ENDIF()

IF (WIN32)
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ELSE()
  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "")
  ENDIF()

ENDIF()

  list( APPEND DRAWEXE_USED_LIBS TKDraw )
  list( APPEND DRAWEXE_USED_LIBS TKMesh )
  list( APPEND DRAWEXE_USED_LIBS TKTopAlgo )
  list( APPEND DRAWEXE_USED_LIBS TKHLR )
  list( APPEND DRAWEXE_USED_LIBS TKGeomAlgo )
  list( APPEND DRAWEXE_USED_LIBS TKGeomBase )
  list( APPEND DRAWEXE_USED_LIBS TKG2d )
  list( APPEND DRAWEXE_USED_LIBS TKBRep )
  list( APPEND DRAWEXE_USED_LIBS TKMath )
  list( APPEND DRAWEXE_USED_LIBS TKG3d )
  list( APPEND DRAWEXE_USED_LIBS TKernel )
  list( APPEND DRAWEXE_USED_LIBS TKService )

if (WIN32)
elseif(APPLE)
else()
endif()

  IF(NOT "${BUILD_PATCH_DIR}" STREQUAL "" AND EXISTS "${BUILD_PATCH_DIR}//src/DRAWEXE/DRAWEXE.cxx")
    list( APPEND DRAWEXE_USED_SRCFILES "${BUILD_PATCH_DIR}//src/DRAWEXE/DRAWEXE.cxx" )
    SOURCE_GROUP (DRAWEXE FILES "${BUILD_PATCH_DIR}//src/DRAWEXE/DRAWEXE.cxx")
  ELSE()
    IF(EXISTS "${CMAKE_SOURCE_DIR}//src/DRAWEXE/DRAWEXE.cxx")
      list( APPEND DRAWEXE_USED_SRCFILES "${CMAKE_SOURCE_DIR}//src/DRAWEXE/DRAWEXE.cxx" )
      SOURCE_GROUP (DRAWEXE FILES "${CMAKE_SOURCE_DIR}//src/DRAWEXE/DRAWEXE.cxx")
    ENDIF()
  ENDIF()


IF (WIN32)
ELSE()

  IF (APPLE)

  ENDIF()

ENDIF()

if ("${USED_TOOLKITS}" STREQUAL "" OR DEFINED TurnONtheDRAWEXE)
 add_executable( DRAWEXE ${DRAWEXE_USED_SRCFILES} )

 set_property(TARGET DRAWEXE PROPERTY FOLDER Draw)

 install( TARGETS DRAWEXE DESTINATION "${INSTALL_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${BUILD_SUFFIX}" )

 set_target_properties( DRAWEXE PROPERTIES COMPILE_FLAGS "${DRAWEXE_PRECOMPILED_DEFS}" )
 include_directories( ${DRAWEXE_COMPILER_DIRECTORIES} )
 target_link_libraries( DRAWEXE ${DRAWEXE_USED_LIBS} )
endif()
